tutorial aangepast met uitleg over gebruik van release tag

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -13,17 +13,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/06/27 15:15:10 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from vera_testframework.pyspark import ReferentiedataTest\n",
     "from pyspark.sql import SparkSession\n",
@@ -34,7 +24,17 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/07/12 15:10:47 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "spark = SparkSession.builder.appName(\"vera_testframework\").getOrCreate()"
    ]
@@ -75,7 +75,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "testframework = DataFrameTester(\n",
     "    df=ruimten_df,\n",
@@ -120,6 +128,7 @@
     "    test=ReferentiedataTest(\n",
     "        soort=\"RUIMTEDETAILSOORT\",\n",
     "        attribuut=\"Code\",\n",
+    "        release_tag=\"latest\",  # standaard is latest, maar kan ook een specifieke versie zijn zoals v4.1.240419\n",
     "    ),\n",
     "    nullable=False,  # of een waarde leeg mag zijn. Dit is aan de gebruiker\n",
     ").show()"
@@ -198,6 +207,15 @@
    "metadata": {},
    "source": [
     "**Voor meer informatie over hoe het _pyspark-testframework_ te gebruiken, raadpleeg de documentatie op [hun Github](https://github.com/woonstadrotterdam/pyspark-testframework)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()"
    ]
   }
  ],
