--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -128,7 +128,7 @@
     "    test=ReferentiedataTest(\n",
     "        soort=\"RUIMTEDETAILSOORT\",\n",
     "        attribuut=\"Code\",\n",
-    "        release_tag=\"latest\",  # standaard is latest, maar kan ook een specifieke versie zijn zoals v4.1.240419\n",
+    "        release=\"latest\",  # standaard is latest, maar kan ook een specifieke versie zijn zoals v4.1.240419\n",
     "    ),\n",
     "    nullable=False,  # of een waarde leeg mag zijn. Dit is aan de gebruiker\n",
     ").show()"
