feat: long-format for vera-testframework

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -22,19 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/07/12 15:10:47 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark = SparkSession.builder.appName(\"vera_testframework\").getOrCreate()"
    ]
@@ -108,16 +98,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+----+-------------------+\n",
-      "| id|code|code__VERAStandaard|\n",
-      "+---+----+-------------------+\n",
-      "|  1| LOG|               true|\n",
-      "|  2| WOO|               true|\n",
-      "|  3| BAD|               true|\n",
-      "|  4| BAD|               true|\n",
-      "|  5|NULL|              false|\n",
-      "|  6| SLA|               true|\n",
-      "+---+----+-------------------+\n",
+      "+-----------+---------------------------------+-----------+----------+---------------------------+--------+\n",
+      "|primary_key|test_name                        |test_result|test_value|test_description           |test_col|\n",
+      "+-----------+---------------------------------+-----------+----------+---------------------------+--------+\n",
+      "|1          |code__VERA_RUIMTEDETAILSOORT_Code|true       |LOG       |VERA_RUIMTEDETAILSOORT_Code|code    |\n",
+      "|2          |code__VERA_RUIMTEDETAILSOORT_Code|true       |WOO       |VERA_RUIMTEDETAILSOORT_Code|code    |\n",
+      "|3          |code__VERA_RUIMTEDETAILSOORT_Code|true       |BAD       |VERA_RUIMTEDETAILSOORT_Code|code    |\n",
+      "|4          |code__VERA_RUIMTEDETAILSOORT_Code|true       |BAD       |VERA_RUIMTEDETAILSOORT_Code|code    |\n",
+      "|5          |code__VERA_RUIMTEDETAILSOORT_Code|false      |NULL      |VERA_RUIMTEDETAILSOORT_Code|code    |\n",
+      "|6          |code__VERA_RUIMTEDETAILSOORT_Code|true       |SLA       |VERA_RUIMTEDETAILSOORT_Code|code    |\n",
+      "+-----------+---------------------------------+-----------+----------+---------------------------+--------+\n",
       "\n"
      ]
     }
@@ -131,7 +121,7 @@
     "        release=\"latest\",  # standaard is latest, maar kan ook een specifieke versie zijn zoals v4.1.240419\n",
     "    ),\n",
     "    nullable=False,  # of een waarde leeg mag zijn. Dit is aan de gebruiker\n",
-    ").show()"
+    ").show(truncate=False)"
    ]
   },
   {
@@ -143,16 +133,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+---------+-------------------+\n",
-      "| id|     naam|naam__VERAStandaard|\n",
-      "+---+---------+-------------------+\n",
-      "|  1|   Loggia|               true|\n",
-      "|  2|Woonkamer|               true|\n",
-      "|  3|Badruimte|              false|\n",
-      "|  4| Badkamer|               true|\n",
-      "|  5|   Kelder|               true|\n",
-      "|  6|     NULL|               true|\n",
-      "+---+---------+-------------------+\n",
+      "+-----------+---------------------------------+-----------+----------+---------------------------+--------+\n",
+      "|primary_key|test_name                        |test_result|test_value|test_description           |test_col|\n",
+      "+-----------+---------------------------------+-----------+----------+---------------------------+--------+\n",
+      "|1          |naam__VERA_RUIMTEDETAILSOORT_Naam|true       |Loggia    |VERA_RUIMTEDETAILSOORT_Naam|naam    |\n",
+      "|2          |naam__VERA_RUIMTEDETAILSOORT_Naam|true       |Woonkamer |VERA_RUIMTEDETAILSOORT_Naam|naam    |\n",
+      "|3          |naam__VERA_RUIMTEDETAILSOORT_Naam|false      |Badruimte |VERA_RUIMTEDETAILSOORT_Naam|naam    |\n",
+      "|4          |naam__VERA_RUIMTEDETAILSOORT_Naam|true       |Badkamer  |VERA_RUIMTEDETAILSOORT_Naam|naam    |\n",
+      "|5          |naam__VERA_RUIMTEDETAILSOORT_Naam|true       |Kelder    |VERA_RUIMTEDETAILSOORT_Naam|naam    |\n",
+      "|6          |naam__VERA_RUIMTEDETAILSOORT_Naam|true       |NULL      |VERA_RUIMTEDETAILSOORT_Naam|naam    |\n",
+      "+-----------+---------------------------------+-----------+----------+---------------------------+--------+\n",
       "\n"
      ]
     }
@@ -165,7 +155,7 @@
     "        attribuut=\"Naam\",\n",
     "    ),\n",
     "    nullable=True,\n",
-    ").show()"
+    ").show(truncate=False)"
    ]
   },
   {
@@ -184,22 +174,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+-------------------+-------------------+\n",
-      "| id|code__VERAStandaard|naam__VERAStandaard|\n",
-      "+---+-------------------+-------------------+\n",
-      "|  1|               true|               true|\n",
-      "|  2|               true|               true|\n",
-      "|  3|               true|              false|\n",
-      "|  4|               true|               true|\n",
-      "|  5|              false|               true|\n",
-      "|  6|               true|               true|\n",
-      "+---+-------------------+-------------------+\n",
+      "+-----------+---------------------------------+-----------+----------+---------------------------+--------+---------------+-----------------------+\n",
+      "|primary_key|test_name                        |test_result|test_value|test_description           |test_col|primary_key_col|timestamp              |\n",
+      "+-----------+---------------------------------+-----------+----------+---------------------------+--------+---------------+-----------------------+\n",
+      "|1          |code__VERA_RUIMTEDETAILSOORT_Code|true       |LOG       |VERA_RUIMTEDETAILSOORT_Code|code    |id             |2025-10-20 20:18:55.579|\n",
+      "|2          |code__VERA_RUIMTEDETAILSOORT_Code|true       |WOO       |VERA_RUIMTEDETAILSOORT_Code|code    |id             |2025-10-20 20:18:55.579|\n",
+      "|3          |code__VERA_RUIMTEDETAILSOORT_Code|true       |BAD       |VERA_RUIMTEDETAILSOORT_Code|code    |id             |2025-10-20 20:18:55.579|\n",
+      "|4          |code__VERA_RUIMTEDETAILSOORT_Code|true       |BAD       |VERA_RUIMTEDETAILSOORT_Code|code    |id             |2025-10-20 20:18:55.579|\n",
+      "|5          |code__VERA_RUIMTEDETAILSOORT_Code|false      |NULL      |VERA_RUIMTEDETAILSOORT_Code|code    |id             |2025-10-20 20:18:55.579|\n",
+      "|6          |code__VERA_RUIMTEDETAILSOORT_Code|true       |SLA       |VERA_RUIMTEDETAILSOORT_Code|code    |id             |2025-10-20 20:18:55.579|\n",
+      "|1          |naam__VERA_RUIMTEDETAILSOORT_Naam|true       |Loggia    |VERA_RUIMTEDETAILSOORT_Naam|naam    |id             |2025-10-20 20:18:55.579|\n",
+      "|2          |naam__VERA_RUIMTEDETAILSOORT_Naam|true       |Woonkamer |VERA_RUIMTEDETAILSOORT_Naam|naam    |id             |2025-10-20 20:18:55.579|\n",
+      "|3          |naam__VERA_RUIMTEDETAILSOORT_Naam|false      |Badruimte |VERA_RUIMTEDETAILSOORT_Naam|naam    |id             |2025-10-20 20:18:55.579|\n",
+      "|4          |naam__VERA_RUIMTEDETAILSOORT_Naam|true       |Badkamer  |VERA_RUIMTEDETAILSOORT_Naam|naam    |id             |2025-10-20 20:18:55.579|\n",
+      "|5          |naam__VERA_RUIMTEDETAILSOORT_Naam|true       |Kelder    |VERA_RUIMTEDETAILSOORT_Naam|naam    |id             |2025-10-20 20:18:55.579|\n",
+      "|6          |naam__VERA_RUIMTEDETAILSOORT_Naam|true       |NULL      |VERA_RUIMTEDETAILSOORT_Naam|naam    |id             |2025-10-20 20:18:55.579|\n",
+      "+-----------+---------------------------------+-----------+----------+---------------------------+--------+---------------+-----------------------+\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "testframework.results.show()"
+    "testframework.results.show(truncate=False)"
    ]
   },
   {
