--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -133,16 +133,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----------+----------------------------------------+-----------+----------+----------------------------------+--------+\n",
-      "|primary_key|test_name                               |test_result|test_value|test_description                  |test_col|\n",
-      "+-----------+----------------------------------------+-----------+----------+----------------------------------+--------+\n",
-      "|1          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |Loggia    |VERA_LATEST_RUIMTEDETAILSOORT_Naam|naam    |\n",
-      "|2          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |Woonkamer |VERA_LATEST_RUIMTEDETAILSOORT_Naam|naam    |\n",
-      "|3          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|false      |Badruimte |VERA_LATEST_RUIMTEDETAILSOORT_Naam|naam    |\n",
-      "|4          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |Badkamer  |VERA_LATEST_RUIMTEDETAILSOORT_Naam|naam    |\n",
-      "|5          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |Kelder    |VERA_LATEST_RUIMTEDETAILSOORT_Naam|naam    |\n",
-      "|6          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |NULL      |VERA_LATEST_RUIMTEDETAILSOORT_Naam|naam    |\n",
-      "+-----------+----------------------------------------+-----------+----------+----------------------------------+--------+\n",
+      "+-----------+----------------------------------------+-----------+----------+--------------------------------------------------------+--------+\n",
+      "|primary_key|test_name                               |test_result|test_value|test_description                                        |test_col|\n",
+      "+-----------+----------------------------------------+-----------+----------+--------------------------------------------------------+--------+\n",
+      "|1          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |Loggia    |Naam van ruimtedetailsoort voldoet aan de VERA-standaard|naam    |\n",
+      "|2          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |Woonkamer |Naam van ruimtedetailsoort voldoet aan de VERA-standaard|naam    |\n",
+      "|3          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|false      |Badruimte |Naam van ruimtedetailsoort voldoet aan de VERA-standaard|naam    |\n",
+      "|4          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |Badkamer  |Naam van ruimtedetailsoort voldoet aan de VERA-standaard|naam    |\n",
+      "|5          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |Kelder    |Naam van ruimtedetailsoort voldoet aan de VERA-standaard|naam    |\n",
+      "|6          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |NULL      |Naam van ruimtedetailsoort voldoet aan de VERA-standaard|naam    |\n",
+      "+-----------+----------------------------------------+-----------+----------+--------------------------------------------------------+--------+\n",
       "\n"
      ]
     }
@@ -155,6 +155,7 @@
     "        attribuut=\"Naam\",\n",
     "    ),\n",
     "    nullable=True,\n",
+    "    description=\"Naam van ruimtedetailsoort voldoet aan de VERA-standaard\",\n",
     ").show(truncate=False)"
    ]
   },
@@ -174,22 +175,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----------+----------------------------------------+-----------+----------+----------------------------------+--------+---------------+-----------------------+\n",
-      "|primary_key|test_name                               |test_result|test_value|test_description                  |test_col|primary_key_col|timestamp              |\n",
-      "+-----------+----------------------------------------+-----------+----------+----------------------------------+--------+---------------+-----------------------+\n",
-      "|1          |code__VERA_LATEST_RUIMTEDETAILSOORT_Code|true       |LOG       |VERA_LATEST_RUIMTEDETAILSOORT_Code|code    |id             |2025-10-20 22:04:55.085|\n",
-      "|2          |code__VERA_LATEST_RUIMTEDETAILSOORT_Code|true       |WOO       |VERA_LATEST_RUIMTEDETAILSOORT_Code|code    |id             |2025-10-20 22:04:55.085|\n",
-      "|3          |code__VERA_LATEST_RUIMTEDETAILSOORT_Code|true       |BAD       |VERA_LATEST_RUIMTEDETAILSOORT_Code|code    |id             |2025-10-20 22:04:55.085|\n",
-      "|4          |code__VERA_LATEST_RUIMTEDETAILSOORT_Code|true       |BAD       |VERA_LATEST_RUIMTEDETAILSOORT_Code|code    |id             |2025-10-20 22:04:55.085|\n",
-      "|5          |code__VERA_LATEST_RUIMTEDETAILSOORT_Code|false      |NULL      |VERA_LATEST_RUIMTEDETAILSOORT_Code|code    |id             |2025-10-20 22:04:55.085|\n",
-      "|6          |code__VERA_LATEST_RUIMTEDETAILSOORT_Code|true       |SLA       |VERA_LATEST_RUIMTEDETAILSOORT_Code|code    |id             |2025-10-20 22:04:55.085|\n",
-      "|1          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |Loggia    |VERA_LATEST_RUIMTEDETAILSOORT_Naam|naam    |id             |2025-10-20 22:04:55.085|\n",
-      "|2          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |Woonkamer |VERA_LATEST_RUIMTEDETAILSOORT_Naam|naam    |id             |2025-10-20 22:04:55.085|\n",
-      "|3          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|false      |Badruimte |VERA_LATEST_RUIMTEDETAILSOORT_Naam|naam    |id             |2025-10-20 22:04:55.085|\n",
-      "|4          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |Badkamer  |VERA_LATEST_RUIMTEDETAILSOORT_Naam|naam    |id             |2025-10-20 22:04:55.085|\n",
-      "|5          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |Kelder    |VERA_LATEST_RUIMTEDETAILSOORT_Naam|naam    |id             |2025-10-20 22:04:55.085|\n",
-      "|6          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |NULL      |VERA_LATEST_RUIMTEDETAILSOORT_Naam|naam    |id             |2025-10-20 22:04:55.085|\n",
-      "+-----------+----------------------------------------+-----------+----------+----------------------------------+--------+---------------+-----------------------+\n",
+      "+-----------+----------------------------------------+-----------+----------+--------------------------------------------------------+--------+---------------+-----------------------+\n",
+      "|primary_key|test_name                               |test_result|test_value|test_description                                        |test_col|primary_key_col|timestamp              |\n",
+      "+-----------+----------------------------------------+-----------+----------+--------------------------------------------------------+--------+---------------+-----------------------+\n",
+      "|1          |code__VERA_LATEST_RUIMTEDETAILSOORT_Code|true       |LOG       |VERA_LATEST_RUIMTEDETAILSOORT_Code                      |code    |id             |2025-10-21 15:58:35.475|\n",
+      "|2          |code__VERA_LATEST_RUIMTEDETAILSOORT_Code|true       |WOO       |VERA_LATEST_RUIMTEDETAILSOORT_Code                      |code    |id             |2025-10-21 15:58:35.475|\n",
+      "|3          |code__VERA_LATEST_RUIMTEDETAILSOORT_Code|true       |BAD       |VERA_LATEST_RUIMTEDETAILSOORT_Code                      |code    |id             |2025-10-21 15:58:35.475|\n",
+      "|4          |code__VERA_LATEST_RUIMTEDETAILSOORT_Code|true       |BAD       |VERA_LATEST_RUIMTEDETAILSOORT_Code                      |code    |id             |2025-10-21 15:58:35.475|\n",
+      "|5          |code__VERA_LATEST_RUIMTEDETAILSOORT_Code|false      |NULL      |VERA_LATEST_RUIMTEDETAILSOORT_Code                      |code    |id             |2025-10-21 15:58:35.475|\n",
+      "|6          |code__VERA_LATEST_RUIMTEDETAILSOORT_Code|true       |SLA       |VERA_LATEST_RUIMTEDETAILSOORT_Code                      |code    |id             |2025-10-21 15:58:35.475|\n",
+      "|1          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |Loggia    |Naam van ruimtedetailsoort voldoet aan de VERA-standaard|naam    |id             |2025-10-21 15:58:35.475|\n",
+      "|2          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |Woonkamer |Naam van ruimtedetailsoort voldoet aan de VERA-standaard|naam    |id             |2025-10-21 15:58:35.475|\n",
+      "|3          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|false      |Badruimte |Naam van ruimtedetailsoort voldoet aan de VERA-standaard|naam    |id             |2025-10-21 15:58:35.475|\n",
+      "|4          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |Badkamer  |Naam van ruimtedetailsoort voldoet aan de VERA-standaard|naam    |id             |2025-10-21 15:58:35.475|\n",
+      "|5          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |Kelder    |Naam van ruimtedetailsoort voldoet aan de VERA-standaard|naam    |id             |2025-10-21 15:58:35.475|\n",
+      "|6          |naam__VERA_LATEST_RUIMTEDETAILSOORT_Naam|true       |NULL      |Naam van ruimtedetailsoort voldoet aan de VERA-standaard|naam    |id             |2025-10-21 15:58:35.475|\n",
+      "+-----------+----------------------------------------+-----------+----------+--------------------------------------------------------+--------+---------------+-----------------------+\n",
       "\n"
      ]
     }
